# finance_analysis

./: .gitignore  Cargo.toml  README.md  excel_mapping_template.json
spec/: design.md  frontend-wealth-plan.md  requirements.md
src/: db.rs  import.rs  lib.rs  main.rs  models.rs  routes.rs
templates/: index.html
test/: excel_mapping_test.json  test.ods
tests/: import_test.rs
